spec.ebnf
code     = equation | equation code ;
equation = reagent rhs | COMMENT | reagent rhs COMMENT ;
rhs      = "=" NAME | "->" reagent ;
reagent  = term | term "+" reagent ;
term     = molecule | NUMBER molecule ;
molecule = atom | atom molecule ;
atom     = ELEMENT | name "_" NUMBER ;
NUMBER   = integer > 0 ;
ELEMENT  = valid element ;
NAME     = non-whitespace, non-"_+;" string ;
COMMENT  = ";" text "\n" ;
